2005-02-10  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c: Setting HIDDEN_AUTH in 
	exchange_provider structure, so that it auth section doesn't
	appear while creating an account.

2005-02-09  Sushma Rai  <rsushma@novell.com>
	
	* storage/exchange-account.c (change_passwd_cb): Setting the new
	password entered when change password is invoked by password expiry
	check. Fixes #72091

2005-02-09  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-account.c (exchange_account_new): Not setting
	default warning period, if user has not selected password expiry
	warning option. 
	(find_passwd_exp_period): Finding the password expiry period and showing
	warning, only if user has selected that option. 
	Fixes #72093

2005-02-08  David Malcolm  <dmalcolm@redhat.com>

	* addressbook/Makefile.am, calendar/Makefile.am,
	camel/Makefile.am,  mail/Makefile.am, shell/Makefile.am,
	storage/Makefile.am, lib/Makefile.am:

	Use appropriate libtool macro for convenience libraries
	(_LTLIBRARIES, rather than _LTLIBRARIES), since some architectures
	do not allow using static libraries this way.

2005-02-08  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-folder.c (camel_exchange_folder_construct): 
	Storing tag information in summary file. Fixes #71555 

2005-02-07  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.1.5
	* NEWS : Updated
	* Updated the po files	

2005-02-07  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-gal.c (func_contains): Handling the
	query with the attribute fileAs. Fixes Gal lookup from user selection
	dialog, which was was not working as the query now is having 
	fileAs=username.

2005-02-04  Sarfraaz Ahmed <asarfraaz@novell.com>
	
	* po/POTFILES.in : Updated with the missing files.

2005-02-04  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange.c (set_mode): Fix the race by 
	having a local variable.